移除getFirst方法, 该方法在java21中才被加入, 考虑到多版本对低版本支持, 故使用get(0)